Program tebak angka

--- a/cekkhodam.html
+++ b/cekkhodam.html
@@ -18,7 +18,7 @@
             let nama = document.getElementById("nama").value;
             let hasil = document.getElementById("hasil");
 
-            let daftarKhodam = ["Reg Ireng", "Sendok Makan Rendah", "Sendok Makan Tinggi", "Elaaa Brazil", "Toa Mesjid", "Syndrome Velocity", "Macan Polkadot", "Makan Siang Gratis", "Pulang", "Aing Maung"];
+            let daftarKhodam = ["Reg Ireng", "Sendok Makan Rendah", "Sendok Makan Tinggi", "Elaaa Brazil", "Toa Mesjid", "Syndrome Velocity", "Macan Polkadot", "Makan Siang Gratis", "Pulang", "Aing Maung", "Lik Lik Balik"];
             let khodamTerpilih = daftarKhodam[Math.floor(Math.random() * daftarKhodam.length)];
 
             hasil.innerHTML = "Khodam untuk " + nama + " adalah: " + khodamTerpilih;
